--- a/index.html
+++ b/index.html
@@ -2,16 +2,11 @@
 <html lang="en-US">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <!-- <link
-      rel="stylesheet"
-      href="<%=htmlWebpackPlugin.files.chunks.main.css %>"
-    /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>The Alternative New York Times</title>
+    <title>The Newest York Times</title>
   </head>
 
   <body>
     <div id="app"></div>
-    <!-- <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script> -->
   </body>
 </html>
